// Copyright 2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package example.weather.v1;

import "buf/validate/validate.proto";

// A example weather report protocol.

enum Condition {
  CONDITION_UNSPECIFIED = 0;
  CONDITION_SUNNY = 1;
  CONDITION_RAINY = 2;
  CONDITION_OVERCAST = 3;
}

message StationReport {
  string station = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "[KW][A-Z]{2}[0-9]{2}"
  ];

  // Station frequency in MHz.
  float frequency = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).float = {
      // NOAA Weather Ratio frequency band.
      gte: 162.40
      lte: 162.55
    }
  ];

  float temperature = 3;
  float pressure = 4;
  float wind_speed = 5;

  Condition conditions = 6 [(buf.validate.field).required = true];
}

message WeatherReport {
  string region = 1 [(buf.validate.field).required = true];
  repeated StationReport weather_stations = 2;
}
